--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,7 @@
 [submodule "SDL"]
 	path = SDL
 	url = https://github.com/Glordim/SDL.git
+[submodule "SPIRV-Cross"]
+	path = SPIRV-Cross
+	url = https://github.com/Glordim/SPIRV-Cross.git
+	branch = master
