--- a/HodEngine/HodEngine.vcxproj
+++ b/HodEngine/HodEngine.vcxproj
@@ -59,13 +59,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Dbghelp.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/SPIRV-Cross/Build/Debug;$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>spirv-cross-core.lib;Dbghelp.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
@@ -81,15 +81,15 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/SPIRV-Cross/Build/Release;$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>spirv-cross-core.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
@@ -131,6 +131,8 @@
 <ClInclude Include="src\Renderer\D3d12\D3d12GpuDevice.h" />
 <ClInclude Include="src\Renderer\D3d12\D3dShader.h" />
 <ClInclude Include="src\Renderer\D3d12\RendererDirectX12.h" />
+<ClInclude Include="src\Renderer\Vulkan\DescriptorSet.h" />
+<ClInclude Include="src\Renderer\Vulkan\DescriptorSetLayout.h" />
 <ClInclude Include="src\Renderer\Vulkan\RendererVulkan.h" />
 <ClInclude Include="src\Renderer\Vulkan\VkGpuDevice.h" />
 <ClInclude Include="src\Renderer\Vulkan\VkMaterial.h" />
@@ -253,6 +255,12 @@
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
 <ClCompile Include="src\Renderer\D3d12\RendererDirectX12.cpp">
+<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+</ClCompile>
+<ClCompile Include="src\Renderer\Vulkan\DescriptorSet.cpp">
+<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+</ClCompile>
+<ClCompile Include="src\Renderer\Vulkan\DescriptorSetLayout.cpp">
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
 <ClCompile Include="src\Renderer\Vulkan\RendererVulkan.cpp">
