--- a/HodEngine/HodEngine.vcxproj
+++ b/HodEngine/HodEngine.vcxproj
@@ -59,13 +59,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Autodesk\FBX\FBX SDK\2019.2\include;$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/SPIRV-Cross/Build/Debug;$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>spirv-cross-core.lib;Dbghelp.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files\Autodesk\FBX\FBX SDK\2019.2\lib\vs2017\x64\debug;$(SolutionDir)/SPIRV-Cross/Build/Debug;$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libfbxsdk.lib;spirv-cross-core.lib;Dbghelp.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
@@ -81,15 +81,15 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Program Files\Autodesk\FBX\FBX SDK\2019.2\include;$(SolutionDir)/SPIRV-Cross;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;C:\VulkanSDK\1.1.114.0\Include\vulkan;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/SPIRV-Cross/Build/Release;$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>spirv-cross-core.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Program Files\Autodesk\FBX\FBX SDK\2019.2\lib\vs2017\x64\release;$(SolutionDir)/SPIRV-Cross/Build/Release;$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.114.0\Lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libfbxsdk.lib;spirv-cross-core.lib;AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
