--- a/HodEngine/HodEngine.vcxproj
+++ b/HodEngine/HodEngine.vcxproj
@@ -107,10 +107,12 @@
 <ClInclude Include="src\Component\CameraComponent.h" />
 <ClInclude Include="src\Component\ColliderComponent.h" />
 <ClInclude Include="src\Component\Component.h" />
-<ClInclude Include="src\Component\LightComponent.h" />
 <ClInclude Include="src\Component\RendererComponent.h" />
 <ClInclude Include="src\Component\SceneComponent.h" />
 <ClInclude Include="src\Component\StaticMeshComponent.h" />
+<ClInclude Include="src\Component\Light\DirLightComponent.h" />
+<ClInclude Include="src\Component\Light\PointLightComponent.h" />
+<ClInclude Include="src\Component\Light\SpotLightComponent.h" />
 <ClInclude Include="src\Renderer\DebugLine.h" />
 <ClInclude Include="src\Renderer\DebugMesh.h" />
 <ClInclude Include="src\Renderer\GpuDevice.h" />
@@ -121,7 +123,6 @@
 <ClInclude Include="src\Renderer\MaterialInstance.h" />
 <ClInclude Include="src\Renderer\MaterialManager.h" />
 <ClInclude Include="src\Renderer\Mesh.h" />
-<ClInclude Include="src\Renderer\PointLight.h" />
 <ClInclude Include="src\Renderer\Renderer.h" />
 <ClInclude Include="src\Renderer\RenderQueue.h" />
 <ClInclude Include="src\Renderer\Shader.h" />
@@ -131,6 +132,9 @@
 <ClInclude Include="src\Renderer\D3d12\D3d12GpuDevice.h" />
 <ClInclude Include="src\Renderer\D3d12\D3dShader.h" />
 <ClInclude Include="src\Renderer\D3d12\RendererDirectX12.h" />
+<ClInclude Include="src\Renderer\Light\DirLight.h" />
+<ClInclude Include="src\Renderer\Light\PointLight.h" />
+<ClInclude Include="src\Renderer\Light\SpotLight.h" />
 <ClInclude Include="src\Renderer\Vulkan\DescriptorSet.h" />
 <ClInclude Include="src\Renderer\Vulkan\DescriptorSetLayout.h" />
 <ClInclude Include="src\Renderer\Vulkan\RendererVulkan.h" />
@@ -201,9 +205,6 @@
 <ClCompile Include="src\Component\Component.cpp">
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
-<ClCompile Include="src\Component\LightComponent.cpp">
-<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
-</ClCompile>
 <ClCompile Include="src\Component\RendererComponent.cpp">
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
@@ -211,6 +212,15 @@
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
 <ClCompile Include="src\Component\StaticMeshComponent.cpp">
+<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+</ClCompile>
+<ClCompile Include="src\Component\Light\DirLightComponent.cpp">
+<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+</ClCompile>
+<ClCompile Include="src\Component\Light\PointLightComponent.cpp">
+<ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
+</ClCompile>
+<ClCompile Include="src\Component\Light\SpotLightComponent.cpp">
 <ExcludedFromBuild Condition="'$(Platform)'=='x64'">true</ExcludedFromBuild>
 </ClCompile>
 <ClCompile Include="src\Renderer\DebugLine.cpp">
