--- a/HodEngine/HodEngine.vcxproj.filters
+++ b/HodEngine/HodEngine.vcxproj.filters
@@ -6,8 +6,10 @@
     </Filter>
     <Filter Include="src"></Filter>
     <Filter Include="src\Component"></Filter>
+    <Filter Include="src\Component\Light"></Filter>
     <Filter Include="src\Renderer"></Filter>
     <Filter Include="src\Renderer\D3d12"></Filter>
+    <Filter Include="src\Renderer\Light"></Filter>
     <Filter Include="src\Renderer\Vulkan"></Filter>
     <Filter Include="src\Test"></Filter>
   </ItemGroup>
@@ -43,10 +45,12 @@
 <ClCompile Include="src\Component\CameraComponent.cpp"><Filter>src\Component</Filter></ClCompile>
 <ClCompile Include="src\Component\ColliderComponent.cpp"><Filter>src\Component</Filter></ClCompile>
 <ClCompile Include="src\Component\Component.cpp"><Filter>src\Component</Filter></ClCompile>
-<ClCompile Include="src\Component\LightComponent.cpp"><Filter>src\Component</Filter></ClCompile>
 <ClCompile Include="src\Component\RendererComponent.cpp"><Filter>src\Component</Filter></ClCompile>
 <ClCompile Include="src\Component\SceneComponent.cpp"><Filter>src\Component</Filter></ClCompile>
 <ClCompile Include="src\Component\StaticMeshComponent.cpp"><Filter>src\Component</Filter></ClCompile>
+<ClCompile Include="src\Component\Light\DirLightComponent.cpp"><Filter>src\Component\Light</Filter></ClCompile>
+<ClCompile Include="src\Component\Light\PointLightComponent.cpp"><Filter>src\Component\Light</Filter></ClCompile>
+<ClCompile Include="src\Component\Light\SpotLightComponent.cpp"><Filter>src\Component\Light</Filter></ClCompile>
 <ClCompile Include="src\Renderer\DebugLine.cpp"><Filter>src\Renderer</Filter></ClCompile>
 <ClCompile Include="src\Renderer\DebugMesh.cpp"><Filter>src\Renderer</Filter></ClCompile>
 <ClCompile Include="src\Renderer\GpuDevice.cpp"><Filter>src\Renderer</Filter></ClCompile>
@@ -98,10 +102,12 @@
 <ClInclude Include="src\Component\CameraComponent.h"><Filter>src\Component</Filter></ClInclude>
 <ClInclude Include="src\Component\ColliderComponent.h"><Filter>src\Component</Filter></ClInclude>
 <ClInclude Include="src\Component\Component.h"><Filter>src\Component</Filter></ClInclude>
-<ClInclude Include="src\Component\LightComponent.h"><Filter>src\Component</Filter></ClInclude>
 <ClInclude Include="src\Component\RendererComponent.h"><Filter>src\Component</Filter></ClInclude>
 <ClInclude Include="src\Component\SceneComponent.h"><Filter>src\Component</Filter></ClInclude>
 <ClInclude Include="src\Component\StaticMeshComponent.h"><Filter>src\Component</Filter></ClInclude>
+<ClInclude Include="src\Component\Light\DirLightComponent.h"><Filter>src\Component\Light</Filter></ClInclude>
+<ClInclude Include="src\Component\Light\PointLightComponent.h"><Filter>src\Component\Light</Filter></ClInclude>
+<ClInclude Include="src\Component\Light\SpotLightComponent.h"><Filter>src\Component\Light</Filter></ClInclude>
 <ClInclude Include="src\Renderer\DebugLine.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\DebugMesh.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\GpuDevice.h"><Filter>src\Renderer</Filter></ClInclude>
@@ -112,7 +118,6 @@
 <ClInclude Include="src\Renderer\MaterialInstance.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\MaterialManager.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Mesh.h"><Filter>src\Renderer</Filter></ClInclude>
-<ClInclude Include="src\Renderer\PointLight.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Renderer.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\RenderQueue.h"><Filter>src\Renderer</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Shader.h"><Filter>src\Renderer</Filter></ClInclude>
@@ -122,6 +127,9 @@
 <ClInclude Include="src\Renderer\D3d12\D3d12GpuDevice.h"><Filter>src\Renderer\D3d12</Filter></ClInclude>
 <ClInclude Include="src\Renderer\D3d12\D3dShader.h"><Filter>src\Renderer\D3d12</Filter></ClInclude>
 <ClInclude Include="src\Renderer\D3d12\RendererDirectX12.h"><Filter>src\Renderer\D3d12</Filter></ClInclude>
+<ClInclude Include="src\Renderer\Light\DirLight.h"><Filter>src\Renderer\Light</Filter></ClInclude>
+<ClInclude Include="src\Renderer\Light\PointLight.h"><Filter>src\Renderer\Light</Filter></ClInclude>
+<ClInclude Include="src\Renderer\Light\SpotLight.h"><Filter>src\Renderer\Light</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Vulkan\DescriptorSet.h"><Filter>src\Renderer\Vulkan</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Vulkan\DescriptorSetLayout.h"><Filter>src\Renderer\Vulkan</Filter></ClInclude>
 <ClInclude Include="src\Renderer\Vulkan\RendererVulkan.h"><Filter>src\Renderer\Vulkan</Filter></ClInclude>
