--- a/.gitmodules
+++ b/.gitmodules
@@ -1,23 +1,23 @@
-[submodule "tinyobjloader"]
+[submodule "SDK/tinyobjloader"]
 	path = SDK/tinyobjloader
 	url = https://github.com/Glordim/tinyobjloader
 	branch = master
-[submodule "PhysX"]
+[submodule "SDK/PhysX"]
 	path = SDK/PhysX
 	url = https://github.com/Glordim/PhysX
 	branch = 4.1
-[submodule "stb"]
+[submodule "SDK/stb"]
 	path = SDK/stb
 	url = https://github.com/Glordim/stb
 	branch = master
-[submodule "glm"]
+[submodule "SDK/glm"]
 	path = SDK/glm
 	url = https://github.com/Glordim/glm
 	branch = master
-[submodule "SDL"]
+[submodule "SDK/SDL"]
 	path = SDK/SDL
 	url = https://github.com/Glordim/SDL.git
-[submodule "SPIRV-Cross"]
+[submodule "SDK/SPIRV-Cross"]
 	path = SDK/SPIRV-Cross
 	url = https://github.com/Glordim/SPIRV-Cross.git
 	branch = master
