--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,41 @@
+[submodule "tinyobjloader"]
+	path = tinyobjloader
+	url = https://github.com/Glordim/tinyobjloader
+	branch = master
+[submodule "PhysX"]
+	path = PhysX
+	url = https://github.com/Glordim/PhysX
+	branch = 4.1
+[submodule "stb"]
+	path = stb
+	url = https://github.com/Glordim/stb
+	branch = master
+[submodule "glm"]
+	path = glm
+	url = https://github.com/Glordim/glm
+	branch = master
+[submodule "SDL"]
+	path = SDL
+	url = https://github.com/Glordim/SDL.git
+[submodule "SPIRV-Cross"]
+	path = SPIRV-Cross
+	url = https://github.com/Glordim/SPIRV-Cross.git
+	branch = master
+[submodule "SDK/SDL"]
+	path = SDK/SDL
+	url = https://github.com/Glordim/SDL.git
+[submodule "SDK/glm"]
+	path = SDK/glm
+	url = https://github.com/Glordim/glm
+	branch = master
+[submodule "SDK/SPIRV-Cross"]
+	path = SDK/SPIRV-Cross
+	url = https://github.com/Glordim/SPIRV-Cross
+	branch = master
+[submodule "SDK/stb"]
+	path = SDK/stb
+	url = https://github.com/Glordim/stb
+	branch = master
 [submodule "SDK/tinyobjloader"]
 	path = SDK/tinyobjloader
 	url = https://github.com/Glordim/tinyobjloader
@@ -6,18 +44,3 @@
 	path = SDK/PhysX
 	url = https://github.com/Glordim/PhysX
 	branch = 4.1
-[submodule "SDK/stb"]
-	path = SDK/stb
-	url = https://github.com/Glordim/stb
-	branch = master
-[submodule "SDK/glm"]
-	path = SDK/glm
-	url = https://github.com/Glordim/glm
-	branch = master
-[submodule "SDK/SDL"]
-	path = SDK/SDL
-	url = https://github.com/Glordim/SDL.git
-[submodule "SDK/SPIRV-Cross"]
-	path = SDK/SPIRV-Cross
-	url = https://github.com/Glordim/SPIRV-Cross.git
-	branch = master
