--- a/HodEngine/CMakeLists.txt
+++ b/HodEngine/CMakeLists.txt
@@ -26,61 +26,44 @@ file(GLOB_RECURSE Srcs
 assign_source_group(${Srcs})
 
 add_executable(HodEngine ${Srcs})
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT HodEngine)
 
-set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../Data")
+set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../../Data")
 
-set(IncludeDirs "${PROJECT_SOURCE_DIR}/src" "../SDK/glm" "../SDK/PhysX/physx/include" "../SDK/PhysX/pxshared/include" "../SDK/SDL/include" "../SDK/tinyobjloader" "../SDK/stb" "../SDK/SPIRV-Cross" "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include")
+include_directories(
+"${PROJECT_SOURCE_DIR}/src"
+"../SDK/glm"
+"../SDK/PhysX/physx/include"
+"../SDK/PhysX/pxshared/include"
+"../SDK/SDL/include"
+"../SDK/tinyobjloader"
+"../SDK/stb"
+"../SDK/SPIRV-Cross"
+"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
+)
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
- set(Libs
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysX_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysXCommon_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysXExtensions_static_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysXFoundation_64"
-"../SDK/SDL/VisualC/x64/Release/SDL2"
-"../SDK/SDL/VisualC/x64/Release/SDL2main"
-"../SDK/SPIRV-Cross/Build/Release/spirv-cross-core"
-"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.lib"
-"d3d12.lib"
-"DXGI.lib")
-
-add_custom_command(TARGET HodEngine POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "../SDK/SDL/VisualC/x64/Release/SDL2.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysX_64.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysXCommon_64.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/release/PhysXFoundation_64.dll"
-		"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.dll"
-        $<TARGET_FILE_DIR:HodEngine>)
-else()
-
-set(Libs
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysX_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysXCommon_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysXExtensions_static_64"
-"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysXFoundation_64"
-"../SDK/SDL/VisualC/x64/Debug/SDL2"
-"../SDK/SDL/VisualC/x64/Debug/SDL2main"
-"../SDK/SPIRV-Cross/Build/Debug/spirv-cross-core"
-"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.lib"
-"d3d12.lib"
-"DXGI.lib")
+target_link_libraries(HodEngine
+optimized "../../SDK/Build/PhysX_lib/release/PhysX_64" debug "../../SDK/Build/PhysX_lib/debug/PhysX_64"
+optimized "../../SDK/Build/PhysX_lib/release/PhysXCommon_64" debug "../../SDK/Build/PhysX_lib/debug/PhysXCommon_64"
+optimized "../../SDK/Build/PhysX_lib/release/PhysXExtensions_static_64" debug "../../SDK/Build/PhysX_lib/debug/PhysXExtensions_static_64"
+optimized "../../SDK/Build/PhysX_lib/release/PhysXFoundation_64" debug "../../SDK/Build/PhysX_lib/debug/PhysXFoundation_64"
+optimized "../../SDK/Build/SDL/Release/SDL2" debug "../../SDK/Build/SDL/Debug/SDL2d"
+optimized "../../SDK/Build/SDL/Release/SDL2main" debug "../../SDK/Build/SDL/Debug/SDL2maind"
+optimized "../../SDK/Build/SPIRV-Cross/Release/spirv-cross-core" debug "../../SDK/Build/SPIRV-Cross/Debug/spirv-cross-core"
+optimized "../../SDK/Build/tinyobjloader/Release/tinyobjloader" debug "../../SDK/Build/tinyobjloader/Debug/tinyobjloader"
+optimized "../../SDK/Build/glm/glm/Release/glm_static" debug "../../SDK/Build/glm/glm/Debug/glm_static"
+optimized "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.lib" debug "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.lib"
+optimized "d3d12.lib" debug "d3d12.lib"
+optimized "DXGI.lib" debug "DXGI.lib"
+)
 
 add_custom_command(TARGET HodEngine POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "../SDK/SDL/VisualC/x64/Release/SDL2.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysX_64.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysXCommon_64.dll"
-		"../SDK/PhysX/physx/bin/win.x86_64.vc141.mt/debug/PhysXFoundation_64.dll"
-		"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.dll"
-        $<TARGET_FILE_DIR:HodEngine>)
-
-endif()
-
-include_directories(${IncludeDirs})
-
-target_link_libraries(HodEngine ${Libs})
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../SDK/Build/SDL/Debug/SDL2d.dll">$<$<CONFIG:release>:"../../SDK/Build/SDL/Release/SDL2.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../SDK/Build/PhysX_lib/debug/PhysX_64.dll">$<$<CONFIG:release>:"../../SDK/Build/PhysX_lib/release/PhysX_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../SDK/Build/PhysX_lib/debug/PhysXCommon_64.dll">$<$<CONFIG:release>:"../../SDK/Build/PhysX_lib/release/PhysXCommon_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../SDK/Build/PhysX_lib/debug/PhysXFoundation_64.dll">$<$<CONFIG:release>:"../../SDK/Build/PhysX_lib/release/PhysXFoundation_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.dll">$<$<CONFIG:release>:"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.dll"> $<TARGET_FILE_DIR:HodEngine>
+)
 
 find_package(Vulkan)
 if (Vulkan_FOUND)
