ImGui selected actor and his components + clear + sperate project (Core and Physic)

--- a/Data/imgui.ini
+++ b/Data/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=43,32
-Size=370,138
+Pos=24,15
+Size=345,158
+Collapsed=0
+
+[Window][Selected Actor]
+Pos=3,2
+Size=339,1074
 Collapsed=0
 
