--- a/HodEngine/CMakeLists.txt
+++ b/HodEngine/CMakeLists.txt
@@ -17,6 +17,7 @@ endfunction(assign_source_group)
 project(HodEngine)
 #add_subdirectory(Core)
 add_subdirectory(Physic)
+add_subdirectory(Renderer)
 	
 file(GLOB_RECURSE Srcs
         "${PROJECT_SOURCE_DIR}/src/*.cpp"
@@ -38,14 +39,6 @@ file(GLOB_RECURSE SrcGame
 
 add_library(Game ${SrcGame})
 
-file(GLOB_RECURSE SrcRenderer
-        "${PROJECT_SOURCE_DIR}/src/Renderer/*.cpp"
-        "${PROJECT_SOURCE_DIR}/src/Renderer/*.h"
-		"${PROJECT_SOURCE_DIR}/src/Renderer/*.inl"
-        )
-
-add_library(Renderer ${SrcRenderer})
-
 #if(MSVC)
 #	target_compile_options(HodEngine PRIVATE /W4 /WX)
 #else()
@@ -63,7 +56,7 @@ include_directories(
 "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 
-target_link_libraries(HodEngine Core Physic
+target_link_libraries(HodEngine Core Physic Renderer
 optimized "../../SDK/Build/PhysX_lib/release/PhysX_64" debug "../../SDK/Build/PhysX_lib/debug/PhysX_64"
 optimized "../../SDK/Build/PhysX_lib/release/PhysXCommon_64" debug "../../SDK/Build/PhysX_lib/debug/PhysXCommon_64"
 optimized "../../SDK/Build/PhysX_lib/release/PhysXExtensions_static_64" debug "../../SDK/Build/PhysX_lib/debug/PhysXExtensions_static_64"
